# docs/swagger.yaml
@@ -639,6 +639,35 @@ paths:
       summary: Create a comment for a work
       tags:
       - comments
+  /works/users/{user_id}:
+    get:
+      description: Get works by user ID
+      parameters:
+      - description: User ID
+        in: path
+        name: user_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/github_com_simesaba80_toybox-back_internal_interface_schema.WorkListResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/echo.HTTPError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/echo.HTTPError'
+      security:
+      - BearerAuth: []
+      summary: Get works by user ID
+      tags:
+      - works
 securityDefinitions:
   BearerAuth:
     description: Bearer token for authentication
